Fixed sizing issue with horizontal scrollbars

--- a/project/dumpApp/static/dumpApp/horizontal_scroll_box.css
+++ b/project/dumpApp/static/dumpApp/horizontal_scroll_box.css
@@ -8,7 +8,7 @@
   position:relative;
   display:block;
   width:320px;
-  height:100%;
+  height:1000px;
   max-height:1000px;
   margin:0;
   background:#fff;
